--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="like">
           <div class="link"><img src="./img/1596476.png" alt="영화"></div>
           <div class="link"><img src="./img/4021631.png" alt="게임"></div>
-          <div class="link"><img src="./img/608502.png" alt="강아지"></div>
+          <div class="link"><img src="./img/608502.png" alt="동물"></div>
           <div class="link"><img src="./img/6726435.png" alt="글쓰기"></div>
         </div>
         <p class="in"><span>영화</span> <span>게임</span> <span>강아지</span> <span>글쓰기</span></p>
